Remove modal z-index fix from styles.css

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -16,11 +16,6 @@
     text-decoration: none;
 }
 
-/* Fix for modals appearing behind backdrop */
-.modal {
-    z-index: 1050;
-}
-
 /* Make table more readable */
 .table {
     width: 100%;
